ERRORS_TEXT
main_prof.cpp: In function ‘int main()’:
main_prof.cpp:60:48: error: use of deleted function ‘seneca::WalkinPatient::WalkinPatient(seneca::WalkinPatient&&)’
    WalkinPatient* p = new WalkinPatient[6]{ 24 };
                                                ^
main_prof.cpp:18:10: note: ‘seneca::WalkinPatient::WalkinPatient(seneca::WalkinPatient&&)’ is implicitly deleted because the default definition would be ill-formed:
    class WalkinPatient : public Patient {
          ^
main_prof.cpp:18:10: error: no matching function for call to ‘seneca::Patient::Patient(seneca::Patient)’
main_prof.cpp:18:10: note: candidates are:
In file included from main_prof.cpp:15:0:
Patient.h:12:3: note: seneca::Patient::Patient(seneca::Patient&)
   Patient(Patient& RS);
   ^
Patient.h:12:3: note:   no known conversion for argument 1 from ‘seneca::Patient’ to ‘seneca::Patient&’
Patient.h:11:3: note: seneca::Patient::Patient(int)
   Patient(int ticketNum);
   ^
main_prof.cpp:61:22: error: use of deleted function ‘seneca::WalkinPatient::WalkinPatient(seneca::WalkinPatient&&)’
    WalkinPatient W = 24;
                      ^
